3-k8s-lab/5-networking-with-pod/network-policy/allow-curl-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-curl-egress
spec:
  podSelector:
    matchLabels:
      app: curl
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              run: curl
      ports:
        - protocol: TCP
          port: 80
